# taskboard

./: .dockerignore  .env.dev.example  .env.example  .gitattributes  .gitignore  CLAUDE.md  PHASE4_PLAN.md  README.md  docker-compose.dev.yml  docker-compose.personal.yml  docker-compose.yml
backend/: Cargo.toml
backend/migrations/: 0000_extensions.sql  0001_identity.sql  0002_organization.sql  0003_boards.sql  0004_tasks.sql  0005_comments_activity.sql  0006_templates.sql  0007_custom_fields.sql  0008_user_preferences.sql  0009_add_task_summary.sql  0010_seed_status_priority_fields.sql  0011_column_color.sql  0012_field_show_on_card.sql  0013_board_views.sql  0014_widen_field_type_check.sql  0015_backfill_default_views.sql  0016_enrich_template_payloads.sql  0017_role_redesign.sql  0018_task_icon.sql  0019_notifications.sql
backend/src/: config.rs  main.rs
backend/src/authz/: authn.rs  check.rs  jwks.rs  matrix.rs  mod.rs  resource_ref.rs
backend/src/collaboration/: activity.rs  activity_helper.rs  board_handlers.rs  comment_handlers.rs  custom_field_handlers.rs  mod.rs  models.rs  position.rs  task_handlers.rs  template_handlers.rs  view_handlers.rs
backend/src/collaboration/notifications/: deadline_scanner.rs  fanout.rs  handlers.rs  mod.rs  (+1 more)
backend/src/http/: error.rs  mod.rs  pagination.rs  router.rs  serde_helpers.rs  version.rs
backend/src/identity/: handlers.rs  mod.rs  models.rs  personal.rs  preference_handlers.rs
backend/src/infra/: active_cache.rs  db.rs  mod.rs  state.rs  uuid7.rs
backend/src/organization/: handlers.rs  mod.rs  models.rs
(+110 files in other folders)
