[package]
name = "taskboard-backend"
version = "0.1.0"
edition = "2024"

[features]
default = []
dev-auth = []

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "util"] }
base64 = "0.22"
thiserror = "2"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
tower = "0.5"
http = "1"
async-trait = "0.1"
moka = { version = "0.12", features = ["sync"] }

[dev-dependencies]
